--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="says">
           <img src="images/testimonial1.png" alt="" />
           <h3>Philip Mccoy</h3>
-          <p class="company-name">Louis Vuitton</p>
+          <p class="company-name">Vikas Bhusare</p>
         </div>
       </section>
 
@@ -159,26 +159,25 @@
         <div class="section-content">
           <div class="email">
             <img src="images/mail-icon.png" alt="" />
-            <div class="contact-text">wesley.white@example.com</div>
+            <div class="contact-text">Vikasbhusare8199@gmail.com</div>
           </div>
 
           <div class="phone">
             <img src="images/phone-icon.png" alt="" />
-            <div class="contact-text">(302) 555-0107</div>
+            <div class="contact-text">+919158426648</div>
           </div>
 
           <div class="address">
             <img src="images/address-logo.png" alt="" />
             <div class="contact-text">
-              2516 James St undefined West Palm Beach, Georgia 30321 United
-              States
+              From Yavtmal , Maharashtra (India) Pin code 445204
             </div>
           </div>
         </div>
       </section>
 
       <footer>
-        This website was developed by Live Blogger &copy; 2020
+        This website was developed by Vikas Bhusare 2020
       </footer>
     </div>
 
